chore: update username

--- a/apps/web/src/content/pages/en/about.mdx
+++ b/apps/web/src/content/pages/en/about.mdx
@@ -25,15 +25,15 @@ Thanks to **Timothy Lin** for the
 
 Here are some websites that inspired me a lot to build a fantastic website.
 
-Refer to [README](https://github.com/tszhong0411/nelsonlai.me?tab=readme-ov-file#credits)
+Refer to [README](https://github.com/nelsonlaidev/nelsonlai.me?tab=readme-ov-file#credits)
 
 ## Social links
 
-- [GitHub](https://github.com/tszhong0411)
-- [Facebook](https://www.facebook.com/tszhong0411)
-- [Instagram](https://www.instagram.com/tszhong0411)
-- [X](https://x.com/tszhong0411)
-- [YouTube](https://www.youtube.com/@tszhong0411)
+- [GitHub](https://github.com/nelsonlaidev)
+- [Facebook](https://www.facebook.com/nelsonlaidev)
+- [Instagram](https://www.instagram.com/nelsonlaidev)
+- [X](https://x.com/nelsonlaidev)
+- [YouTube](https://www.youtube.com/@nelsonlaidev)
 
 ## Logo
 
