--- a/apps/web/src/content/pages/zh-TW/about.mdx
+++ b/apps/web/src/content/pages/zh-TW/about.mdx
@@ -25,15 +25,15 @@
 
 以下是一些對我構建一個出色網站啟發良多的網站。
 
-詳見 [README](https://github.com/tszhong0411/nelsonlai.me?tab=readme-ov-file#credits)
+詳見 [README](https://github.com/nelsonlaidev/nelsonlai.me?tab=readme-ov-file#credits)
 
 ## 社交連結
 
-- [GitHub](https://github.com/tszhong0411)
-- [Facebook](https://www.facebook.com/tszhong0411)
-- [Instagram](https://www.instagram.com/tszhong0411)
-- [X](https://x.com/tszhong0411)
-- [YouTube](https://www.youtube.com/@tszhong0411)
+- [GitHub](https://github.com/nelsonlaidev)
+- [Facebook](https://www.facebook.com/nelsonlaidev)
+- [Instagram](https://www.instagram.com/nelsonlaidev)
+- [X](https://x.com/nelsonlaidev)
+- [YouTube](https://www.youtube.com/@nelsonlaidev)
 
 ## 標誌
 
