--- a/apps/web/src/content/projects/zh-CN/links.mdx
+++ b/apps/web/src/content/projects/zh-CN/links.mdx
@@ -2,7 +2,7 @@
 name: Links
 description: 将我所有的社交媒体连结集中在一个地方
 homepage: https://links.nelsonlai.me
-github: https://github.com/tszhong0411/links
+github: https://github.com/nelsonlaidev/links
 techstack:
   - Typescript
   - Next.js
