--- a/apps/web/src/content/projects/zh-TW/tools.mdx
+++ b/apps/web/src/content/projects/zh-TW/tools.mdx
@@ -2,7 +2,7 @@
 name: Tools
 description: 一些為網頁開發者準備的工具
 homepage: https://tools.nelsonlai.me
-github: https://github.com/tszhong0411/tools
+github: https://github.com/nelsonlaidev/tools
 techstack:
   - Typescript
   - Next.js
