--- a/apps/web/src/content/projects/en/links.mdx
+++ b/apps/web/src/content/projects/en/links.mdx
@@ -2,7 +2,7 @@
 name: Links
 description: All my social media links in one place
 homepage: https://links.nelsonlai.me
-github: https://github.com/tszhong0411/links
+github: https://github.com/nelsonlaidev/links
 techstack:
   - Typescript
   - Next.js
