--- a/apps/web/src/content/projects/en/zsh-web.mdx
+++ b/apps/web/src/content/projects/en/zsh-web.mdx
@@ -2,7 +2,7 @@
 name: Zsh Web
 description: A web-based terminal that runs Zsh in the browser simulately.
 homepage: https://zsh.nelsonlai.me
-github: https://github.com/tszhong0411/zsh-web
+github: https://github.com/nelsonlaidev/zsh-web
 techstack:
   - Typescript
   - Next.js
