--- a/apps/web/src/content/projects/zh-CN/zsh-web.mdx
+++ b/apps/web/src/content/projects/zh-CN/zsh-web.mdx
@@ -2,7 +2,7 @@
 name: Zsh Web
 description: 一个在浏览器中运行 Zsh 的基于网页的终端。
 homepage: https://zsh.nelsonlai.me
-github: https://github.com/tszhong0411/zsh-web
+github: https://github.com/nelsonlaidev/zsh-web
 techstack:
   - Typescript
   - Next.js
