--- a/apps/web/src/content/projects/zh-TW/links.mdx
+++ b/apps/web/src/content/projects/zh-TW/links.mdx
@@ -2,7 +2,7 @@
 name: Links
 description: 將我所有的社交媒體連結集中在一個地方
 homepage: https://links.nelsonlai.me
-github: https://github.com/tszhong0411/links
+github: https://github.com/nelsonlaidev/links
 techstack:
   - Typescript
   - Next.js
