--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -23,7 +23,7 @@
     "*.ts": "eslint --fix"
   },
   "devDependencies": {
-    "@nelsonlaidev/eslint-config": "file:../../../config/packages/eslint-config",
+    "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@8203040",
     "@nelsonlaidev/typescript-config": "^0.0.2",
     "@types/react": "^19.1.6",
     "next": "^15.3.3",
