refactor: replace `SITE_NAME` with `MY_NAME` for clarity

--- a/packages/i18n/src/messages/en.json
+++ b/packages/i18n/src/messages/en.json
@@ -235,8 +235,7 @@
     "link-to-section": "Link to section"
   },
   "metadata": {
-    "site-description": "Nelson Lai is a full stack engineer based in Hong Kong. He builds performant and elegant websites using React, Node.js, and modern technologies.",
-    "site-title": "Nelson Lai - A Full Stack Engineer"
+    "site-description": "Nelson Lai is a full stack engineer based in Hong Kong. He builds performant and elegant websites using React, Node.js, and modern technologies."
   },
   "projects": {
     "description": "The list of my projects. Everything was made with ❤️.",
