--- a/packages/i18n/src/messages/zh-CN.json
+++ b/packages/i18n/src/messages/zh-CN.json
@@ -235,8 +235,7 @@
     "link-to-section": "连结至章节"
   },
   "metadata": {
-    "site-description": "Nelson Lai 是一位居住于香港的全栈工程师。他使用 React、Node.js 和现代技术构建高效且优雅的网站。",
-    "site-title": "Nelson Lai - 一名全栈工程师"
+    "site-description": "Nelson Lai 是一位居住于香港的全栈工程师。他使用 React、Node.js 和现代技术构建高效且优雅的网站。"
   },
   "projects": {
     "description": "我的项目清单。所有东西都是用 ❤️ 制作",
