--- a/packages/i18n/src/messages/zh-TW.json
+++ b/packages/i18n/src/messages/zh-TW.json
@@ -235,8 +235,7 @@
     "link-to-section": "連結至章節"
   },
   "metadata": {
-    "site-description": "Nelson Lai 是一位居住於香港的全端工程師。他使用 React、Node.js 和現代技術構建高效且優雅的網站。",
-    "site-title": "Nelson Lai - 一名全端工程師"
+    "site-description": "Nelson Lai 是一位居住於香港的全端工程師。他使用 React、Node.js 和現代技術構建高效且優雅的網站。"
   },
   "projects": {
     "description": "我的專案清單。所有東西都是用 ❤️ 製作",
