--- a/apps/web/src/content/blog/zh-CN/how-to-build-a-blog-with-nextjs-and-mdx.mdx
+++ b/apps/web/src/content/blog/zh-CN/how-to-build-a-blog-with-nextjs-and-mdx.mdx
@@ -19,7 +19,7 @@ https://github.com/nelsonlaidev/nextjs-mdx-blog
 
 ## 示例
 
-[线上示例](https://hong-nextjs-mdx-blog.vercel.app)
+[线上示例](https://nelsonlai-nextjs-mdx-blog.vercel.app)
 
 <Video src='/videos/blog/how-to-build-a-blog-with-nextjs-and-mdx/demo.mp4' width={1920} height={1080} />
 
