--- a/apps/web/src/content/projects/en/links.mdx
+++ b/apps/web/src/content/projects/en/links.mdx
@@ -1,7 +1,7 @@
 ---
 name: Links
 description: All my social media links in one place
-homepage: https://links.nelsonlai.me
+homepage: https://nelsonlai.link
 github: https://github.com/nelsonlaidev/links
 techstack:
   - Typescript
