--- a/apps/web/src/content/projects/zh-CN/links.mdx
+++ b/apps/web/src/content/projects/zh-CN/links.mdx
@@ -1,7 +1,7 @@
 ---
 name: Links
 description: 将我所有的社交媒体连结集中在一个地方
-homepage: https://links.nelsonlai.me
+homepage: https://nelsonlai.link
 github: https://github.com/nelsonlaidev/links
 techstack:
   - Typescript
