refactor: update project name

--- a/apps/web/src/content/projects/en/blog.mdx
+++ b/apps/web/src/content/projects/en/blog.mdx
@@ -2,7 +2,7 @@
 name: Blog
 description: Share my knowledge and experience
 homepage: https://nelsonlai.me
-github: https://github.com/nelsonlaidev/nelsonlai.me
+github: https://github.com/nelsonlaidev/nelsonlai.dev
 techstack:
   - Typescript
   - PostgreSQL
