--- a/apps/web/src/content/projects/zh-CN/blog.mdx
+++ b/apps/web/src/content/projects/zh-CN/blog.mdx
@@ -2,7 +2,7 @@
 name: Blog
 description: 分享我的知识和经验
 homepage: https://nelsonlai.me
-github: https://github.com/nelsonlaidev/nelsonlai.me
+github: https://github.com/nelsonlaidev/nelsonlai.dev
 techstack:
   - Typescript
   - PostgreSQL
