--- a/apps/web/src/content/pages/en/about.mdx
+++ b/apps/web/src/content/pages/en/about.mdx
@@ -25,7 +25,7 @@ Thanks to **Timothy Lin** for the
 
 Here are some websites that inspired me a lot to build a fantastic website.
 
-Refer to [README](https://github.com/nelsonlaidev/nelsonlai.me?tab=readme-ov-file#credits)
+Refer to [README](https://github.com/nelsonlaidev/nelsonlai.dev?tab=readme-ov-file#credits)
 
 ## Social links
 
