--- a/apps/web/src/content/pages/zh-CN/about.mdx
+++ b/apps/web/src/content/pages/zh-CN/about.mdx
@@ -25,7 +25,7 @@
 
 以下是一些对我构建一个出色网站启发良多的网站。
 
-详见 [README](https://github.com/nelsonlaidev/nelsonlai.me?tab=readme-ov-file#credits)
+详见 [README](https://github.com/nelsonlaidev/nelsonlai.dev?tab=readme-ov-file#credits)
 
 ## 社交连结
 
