--- a/apps/web/src/content/pages/zh-TW/about.mdx
+++ b/apps/web/src/content/pages/zh-TW/about.mdx
@@ -25,7 +25,7 @@
 
 以下是一些對我構建一個出色網站啟發良多的網站。
 
-詳見 [README](https://github.com/nelsonlaidev/nelsonlai.me?tab=readme-ov-file#credits)
+詳見 [README](https://github.com/nelsonlaidev/nelsonlai.dev?tab=readme-ov-file#credits)
 
 ## 社交連結
 
