refactor: new domain

--- a/apps/web/src/content/projects/en/blog.mdx
+++ b/apps/web/src/content/projects/en/blog.mdx
@@ -1,7 +1,7 @@
 ---
 name: Blog
 description: Share my knowledge and experience
-homepage: https://nelsonlai.me
+homepage: https://nelsonlai.dev
 github: https://github.com/nelsonlaidev/nelsonlai.dev
 techstack:
   - Typescript
