--- a/apps/web/src/content/projects/en/zsh-web.mdx
+++ b/apps/web/src/content/projects/en/zsh-web.mdx
@@ -1,7 +1,7 @@
 ---
 name: Zsh Web
 description: A web-based terminal that runs Zsh in the browser simulately.
-homepage: https://zsh.nelsonlai.me
+homepage: https://zsh.nelsonlai.dev
 github: https://github.com/nelsonlaidev/zsh-web
 techstack:
   - Typescript
