--- a/apps/web/src/content/projects/zh-TW/zsh-web.mdx
+++ b/apps/web/src/content/projects/zh-TW/zsh-web.mdx
@@ -1,7 +1,7 @@
 ---
 name: Zsh Web
 description: 一個在瀏覽器中運行 Zsh 的基於網頁的終端。
-homepage: https://zsh.nelsonlai.me
+homepage: https://zsh.nelsonlai.dev
 github: https://github.com/nelsonlaidev/zsh-web
 techstack:
   - Typescript
