--- a/packages/i18n/src/messages/zh-CN.json
+++ b/packages/i18n/src/messages/zh-CN.json
@@ -125,7 +125,7 @@
   "dialog": {
     "sign-in": {
       "continue-with": "使用 {provider} 继续",
-      "description": "以继续使用 nelsonlai.me",
+      "description": "以继续使用 nelsonlai.dev",
       "last-used": "上次使用"
     }
   },
