--- a/apps/web/src/content/projects/en/one-blog.mdx
+++ b/apps/web/src/content/projects/en/one-blog.mdx
@@ -1,7 +1,7 @@
 ---
 name: One Blog
 description: A simple full-stack blog
-homepage: https://one-blog.nelsonlai.me
+homepage: https://one-blog.nelsonlai.dev
 github: https://github.com/nelsonlaidev/one-blog
 techstack:
   - Typescript
