--- a/apps/web/src/content/projects/en/tools.mdx
+++ b/apps/web/src/content/projects/en/tools.mdx
@@ -1,13 +1,13 @@
 ---
 name: Tools
 description: Some tools for web developer
-homepage: https://tools.nelsonlai.me
+homepage: https://tools.nelsonlai.dev
 github: https://github.com/nelsonlaidev/tools
 techstack:
   - Typescript
   - Next.js
 ---
 
-I made some useful tools and hosted them on [tools.nelsonlai.me](https://tools.nelsonlai.me) I want to practice my programming skills. Learning different techniques by making different tools, such as making and view PDF is not easy, and color is also a science
+I made some useful tools and hosted them on [tools.nelsonlai.dev](https://tools.nelsonlai.dev) I want to practice my programming skills. Learning different techniques by making different tools, such as making and view PDF is not easy, and color is also a science
 
 Hope the tools I made help you!
