--- a/apps/web/src/content/projects/zh-TW/one-blog.mdx
+++ b/apps/web/src/content/projects/zh-TW/one-blog.mdx
@@ -1,7 +1,7 @@
 ---
 name: One Blog
 description: 一個簡單的全端部落格
-homepage: https://one-blog.nelsonlai.me
+homepage: https://one-blog.nelsonlai.dev
 github: https://github.com/nelsonlaidev/one-blog
 techstack:
   - Typescript
