refactor: use my logo in get-in-touch component

--- a/packages/i18n/src/messages/en.json
+++ b/packages/i18n/src/messages/en.json
@@ -179,7 +179,7 @@
     },
     "get-in-touch": {
       "description": "Feel free to reach out to me!",
-      "image-alt": "Me sit in front of my desk and coding",
+      "image-alt": "Nelson Lai's Logo",
       "title": "Any questions about Next.js?"
     },
     "hero": {
