--- a/packages/i18n/src/messages/zh-CN.json
+++ b/packages/i18n/src/messages/zh-CN.json
@@ -179,7 +179,7 @@
     },
     "get-in-touch": {
       "description": "随时联络我！",
-      "image-alt": "我坐在办公桌前写程序",
+      "image-alt": "Nelson Lai 的标志",
       "title": "有关 Next.js 的任何问题？"
     },
     "hero": {
