--- a/packages/i18n/src/messages/zh-TW.json
+++ b/packages/i18n/src/messages/zh-TW.json
@@ -179,7 +179,7 @@
     },
     "get-in-touch": {
       "description": "隨時聯絡我！",
-      "image-alt": "我坐在辦公桌前寫程式",
+      "image-alt": "Nelson Lai 的標誌",
       "title": "有關 Next.js 的任何問題？"
     },
     "hero": {
