refactor: update blog post summary

--- a/apps/web/src/content/blog/zh-CN/top-8-attractive-web-design-websites.mdx
+++ b/apps/web/src/content/blog/zh-CN/top-8-attractive-web-design-websites.mdx
@@ -2,7 +2,7 @@
 title: 八个吸引人的网页设计网站
 date: '2023-08-22T00:00:00Z'
 modifiedTime: '2023-09-17T00:00:00Z'
-summary: 探索八个令人惊艳且充满灵感的网页设计网站，提升你的设计水平，从这些顶尖平台中获取启发。
+summary: 探索八个令人惊艳且充满灵感的网页设计网站。
 ---
 
 ## 前言
