--- a/apps/web/src/content/blog/zh-TW/top-8-attractive-web-design-websites.mdx
+++ b/apps/web/src/content/blog/zh-TW/top-8-attractive-web-design-websites.mdx
@@ -2,7 +2,7 @@
 title: 八個吸引人的網頁設計網站
 date: '2023-08-22T00:00:00Z'
 modifiedTime: '2023-09-17T00:00:00Z'
-summary: 探索八個令人驚艷且充滿靈感的網頁設計網站，提升你的設計水平，從這些頂尖平台中獲取啟發。
+summary: 探索八個令人驚艷且充滿靈感的網頁設計網站。
 ---
 
 ## 前言
